# PictureAndVideoCleaner

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: mvp-spec.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
