[package]
name = "picture-and-video-cleaner"
version = "0.1.0"
description = "Windows向け画像整理アプリ"
authors = ["Picture Cleaner"]
edition = "2021"

[lib]
name = "picture_and_video_cleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
trash = "5"
walkdir = "2"
